name:                pandoc-utils
version:             0.1.0
synopsis:
  A few utility functions to work with Pandoc in Haskell applications.
description:
  A work in progress.
license:             MIT
license-file:        LICENSE
author:              Krasjet
maintainer:          Krasjet
copyright:           Copyright (c) 2020 Krasjet
homepage:            https://github.com/Krasjet/pandoc-utils
category:            Text
cabal-version:       >=2.0

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:
      Text.Pandoc.Filter.Utils
  build-depends:
      base          >=4.10 && <4.15
    , pandoc-types ^>=1.20

test-suite pandoc-utils-test
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:
      base          >=4.10 && <4.15
    , pandoc-utils
    , containers   ^>=0.6
    , pandoc-types ^>=1.20
    , transformers ^>=0.5
    , tasty        ^>=1.2
    , tasty-hspec  ^>=1.1
    , text         ^>=1.2
